# Puffin-OpenGL-Engine-V2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  PuffinEngineV2.sln  PuffinEngineV2.vcxproj  PuffinEngineV2.vcxproj.filters  README.md  Resource.rc  TODO.txt  imgui.ini  resource.h
Data/Icons/: Info.txt
Data/Shaders/: DepthMapDirectionalLight.frag  DepthMapPointLight.frag  DepthMapPointLight.geom  DepthMapPointLight.vert  Font.vert  Gizmo.frag  Gizmo.vert  Mesh.frag  Mesh.vert  Particle.frag  Particle.vert  Postprocess.frag  Skybox.frag  Skybox.vert  Water.frag  Water.vert  Wireframe.frag  Wireframe.vert
DemoData/Models/Farmhouse/: farmhouse_obj.mtl
Inc/: EngineDemo.hpp
Inc/PuffinEngine/: AlphaBlend.hpp  BaseMesh.hpp  Camera.hpp  CameraFrustum.hpp  CommonUtils.hpp  ConfigGuiRenderer.hpp  Configuration.hpp  Core.hpp  CubeTextureBuffer.hpp  DefaultFontRenderer.hpp  DefaultGizmoRenderer.hpp  DefaultGuiRenderer.hpp  DefaultMeshRenderer.cpp  DefaultMeshRenderer.hpp  DefaultParticleSystemRenderer.hpp  DefaultPostprocessRenderer.hpp  DefaultShadowMapRenderer.hpp  DefaultSkyboxRenderer.hpp  DefaultWaterRenderer.hpp  DepthTest.hpp  DepthTextureBuffer.hpp  DirectionalLight.hpp  Display.hpp  Exception.hpp  FaceCull.hpp  Fog.hpp  FontRenderer.hpp  FrameBuffer.hpp  GizmoRenderer.hpp  GlUtils.hpp  GuiRenderer.hpp  InitConfig.hpp  Input.hpp  KeyCodes.hpp  Lighting.hpp  Logger.hpp  MasterRenderer.hpp  Material.hpp  Mesh.hpp  MeshEntity.hpp  (+35 more)
Shaders/: DepthMapDirectionalLight.vert  Font.frag  Master.frag  Master.vert  Mesh.frag  Mesh.vert  Postprocess.frag  PostprocessGlowBloom.frag  Skybox.frag  Skybox.vert  SkyboxFS.glsl  basic_fs.glsl  basic_vs.glsl
Src/: EngineDemo.cpp  Main.cpp
Src/PuffinEngine/: BaseMesh.cpp  Camera.cpp  CameraFrustum.cpp  CommonUtils.cpp  ConfigGuiRenderer.cpp  Configuration.cpp  Core.cpp  DefaultFontRenderer.cpp  DefaultGizmoRenderer.cpp  DefaultGuiRenderer.cpp  DefaultMeshRenderer.cpp  DefaultParticleSystemRenderer.cpp  DefaultPostprocessRenderer.cpp  DefaultShadowMapRenderer.cpp  DefaultSkyboxRenderer.cpp  DefaultWaterRenderer.cpp  Display.cpp  FrameBuffer.cpp  GlUtils.cpp  InitConfig.cpp  Input.cpp  Logger.cpp  MasterRenderer.cpp  Mesh.cpp  MeshManager.cpp  ParticleSystem.cpp  SceneLoader.cpp  ShaderProgram.cpp  Skybox.cpp  SkyboxRenderer.cpp  System.cpp  Texture.cpp  Window.cpp
